tests/snapshots/run_wpt_conformance__litert_concat_three_float16_3D_tensors_of_same_shape_along_axis_2.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "concat.https.any.js",
    "concat three float16 3D tensors of same shape along axis 2",
    "litert",
    "PASS",
)
